# ProjectEulerHaskell

./: .gitignore  .project  ProjectEulerHaskell.cabal  input.txt
src/: Main.hs  Problem22.hs  Problem64.hs  Problem66.hs
src/Example/: ArrowExam1.hs  ArrowTutorial.hs  Calc.hs  LGCodeJam2013.hs
