name:           ProjectEulerHaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         wonyoung.jang

executable ProjectEulerHaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Problem64,
                   Example.ArrowExam1,
                   Example.ArrowTutorial

